--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cachetools==5.5.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.7
+clickhouse-connect==0.8.15
 confluent-kafka==2.3.0
 decorator==5.1.1
 docker==7.1.0
