--- a/dev/config/examples/kafka.structured.mem.yml
+++ b/dev/config/examples/kafka.structured.mem.yml
@@ -8,12 +8,12 @@ commands:
       );
 
 pipeline:
-  batch_size: {{ SQLFLOW_BATCH_SIZE|default(1) }}
+  batch_size: {{ SQLFLOW_BATCH_SIZE|default:1 }}
 
   source:
     type: kafka
     kafka:
-      brokers: [{{ SQLFLOW_KAFKA_BROKERS|default('localhost:9092') }}]
+      brokers: [{{ SQLFLOW_KAFKA_BROKERS|default:'localhost:9092' }}]
       group_id: test
       auto_offset_reset: earliest
       topics:
