feat(Error Handling): Adds support for handler error handling. (#126)
* feat(Error Handling): Adds support for handler error handling.

- Associates error handling with the pipeline handler
- Adds 3 policies - Raise, Ignore and DLQ
- DLQ supports sinking batch records to Kafka

refs #74

* pipeline handles 3 errors: RAISE (default), IGNORE and DLQ.

Error policy is attached at the top level pipeline level

* validation

* example validation, full schema

* handler invoke test cases to raise errors

* Pipeline

* PipelineErrorPolicies -> PipelineErrorPolicy

* integration tests

--- a/dev/config/examples/kafka.dlq.yml
+++ b/dev/config/examples/kafka.dlq.yml
@@ -1,7 +1,12 @@
 pipeline:
   batch_size: {{ SQLFLOW_BATCH_SIZE|default(1000) }}
   on_error:
-    policy: {{ SQLFLOW_SOURCE_ERROR_POLICY|default('RAISE') }}
+    policy: {{ SQLFLOW_SOURCE_ERROR_POLICY|default('DLQ') }}
+    dlq:
+      type: kafka
+      kafka:
+        brokers: [{{ SQLFLOW_KAFKA_BROKERS|default('localhost:9092') }}]
+        topic: {{ SQLFLOW_DLQ_TOPIC|default('dlq-topic') }}
 
   source:
     type: kafka
@@ -16,13 +21,8 @@ pipeline:
     type: 'handlers.InferredMemBatch'
     sql: |
       SELECT
-        properties.city as city,
-        1 as city_count
+        broken
       FROM batch
-      ORDER BY city DESC
 
   sink:
-    type: kafka
-    kafka:
-      brokers: [{{ SQLFLOW_KAFKA_BROKERS|default('localhost:9092') }}]
-      topic: {{ SQLFLOW_OUTPUT_TOPIC|default('output-simple-agg-mem') }}
+    type: console
