--- a/dev/config/examples/kafka.structured.mem.yml
+++ b/dev/config/examples/kafka.structured.mem.yml
@@ -8,7 +8,7 @@ commands:
       );
 
 pipeline:
-  batch_size: {{ SQLFLOW_BATCH_SIZE|default:1000 }}
+  batch_size: {{ SQLFLOW_BATCH_SIZE|default:500 }}
 
   source:
     type: kafka
@@ -26,8 +26,9 @@ pipeline:
     sql: |
       SELECT 
         properties.city as city,
-        1 as city_count
+        COUNT(*) as count 
       FROM source 
+      GROUP BY properties.city;
 
   sink:
     type: console
