--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.7.0
+anyio==4.9.0
 asttokens==2.4.1
+attrs==25.1.0
 blinker==1.9.0
 cachetools==5.5.0
 certifi==2024.12.14
@@ -8,18 +10,24 @@ click==8.1.7
 clickhouse-connect==0.8.15
 confluent-kafka==2.3.0
 decorator==5.1.1
+Deprecated==1.2.15
 docker==7.1.0
 duckdb==1.2.2
 executing==2.0.1
+fastapi==0.115.13
+filelock==3.16.1
 Flask==3.1.0
 fsspec==2024.12.0
+h11==0.16.0
 idna==3.10
+importlib_metadata==8.5.0
 iniconfig==2.0.0
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+lz4==4.4.3
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
@@ -27,8 +35,11 @@ mdurl==0.1.2
 mmh3==5.0.1
 numpy==1.26.2
 opentelemetry-api==1.29.0
+opentelemetry-distro==0.50b0
 opentelemetry-exporter-prometheus==0.50b0
+opentelemetry-instrumentation==0.50b0
 opentelemetry-sdk==1.29.0
+opentelemetry-semantic-conventions==0.50b0
 packaging==23.2
 pandas==2.2.1
 parso==0.8.3
@@ -45,24 +56,35 @@ pydantic_core==2.27.2
 Pygments==2.17.2
 pyiceberg==0.8.1
 pyparsing==3.2.1
+pytest==7.4.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
+referencing==0.36.2
 requests==2.32.3
+requests-file==2.1.0
 rich==13.9.4
+rpds-py==0.22.3
 six==1.16.0
+sniffio==1.3.1
 sortedcontainers==2.4.0
 SQLAlchemy==2.0.37
 stack-data==0.6.3
+starlette==0.46.2
 strictyaml==1.7.3
 tenacity==9.0.0
+testcontainers==4.9.0
 tldextract==5.1.3
 traitlets==5.14.0
 typing_extensions==4.12.2
 tzdata==2024.1
+ujson==5.10.0
 urllib3==2.3.0
+uvicorn==0.34.3
 wcwidth==0.2.12
 websockets==14.1
 Werkzeug==3.1.3
 wrapt==1.17.0
+zipp==3.21.0
+zstandard==0.23.0
