--- a/dev/kafka-single.yml
+++ b/dev/kafka-single.yml
@@ -20,44 +20,10 @@ services:
       - "9092:9092"
       - "29092:29092"
       - "9999:9999"
-      - "9093:9093"
-    volumes:
-      - ./kafka/secrets:/etc/kafka/secrets
     environment:
-      KAFKA_ADVERTISED_LISTENERS: |
-        INTERNAL://kafka1:19092,
-        EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,
-        DOCKER://host.docker.internal:29092,
-        SSL://kafka1:9093
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: |
-        INTERNAL:PLAINTEXT,
-        EXTERNAL:PLAINTEXT,
-        DOCKER:PLAINTEXT,
-        SSL:SSL
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka1:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,DOCKER://host.docker.internal:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENERS: |
-        INTERNAL://0.0.0.0:19092,
-        EXTERNAL://0.0.0.0:9092,
-        DOCKER://0.0.0.0:29092,
-        SSL://0.0.0.0:9093
-
-      # SSL configuration
-      KAFKA_SSL_KEYSTORE_FILENAME: kafka.keystore.jks
-      KAFKA_SSL_KEYSTORE_CREDENTIALS: keystore_creds
-      KAFKA_SSL_KEY_CREDENTIALS: key_creds
-      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.truststore.jks
-      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: truststore_creds
-
-      # Keystore/truststore passwords (via credentials file or use *_PASSWORD env vars instead)
-      KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: ""  # disable hostname verification (useful in dev)
-      KAFKA_SSL_CLIENT_AUTH: none  # change to 'required' if using mTLS
-
-      KAFKA_SASL_MECHANISM: PLAIN
-      KAFKA_SASL_JAAS_CONFIG: |
-        org.apache.kafka.common.security.plain.PlainLoginModule required
-        username="testuser"
-        password="testpassword";
-
       KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
       KAFKA_BROKER_ID: 1
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
