--- a/dev/kafka/kafka_server_jaas.conf
+++ b/dev/kafka/kafka_server_jaas.conf
@@ -1,5 +1,14 @@
 KafkaServer {
     org.apache.kafka.common.security.plain.PlainLoginModule required
-    username="testuser"
-    password="testpassword";
+    serviceName="kafka"
+    username="user"
+    password="bitnami"
+    user_kafka="bitnami";
+};
+
+ControllerServer {
+    org.apache.kafka.common.security.plain.PlainLoginModule required
+    serviceName="kafka"
+    username="controller_user"
+    password="bitnami";
 };
