--- a/dev/config/examples/kafka.sasl-tls.yml
+++ b/dev/config/examples/kafka.sasl-tls.yml
@@ -27,4 +27,18 @@ pipeline:
     sql: SELECT * FROM batch
 
   sink:
-    type: console
+    type: kafka
+    kafka:
+      brokers: [{{ kafka_brokers|default('localhost:9092') }}]
+      topic: output-sasl-tls-1
+      security_protocol: SASL_SSL
+      ssl:
+        ca_location: {{ SQLFLOW_ROOT_DIR }}/dev/kafka/certs/ca-cert.pem
+        key_location: {{ SQLFLOW_ROOT_DIR }}/dev/kafka/certs/client-key.pem
+        certificate_location: {{ SQLFLOW_ROOT_DIR }}/dev/kafka/certs/client-cert.pem
+        key_password: testpass
+        endpoint_identification_algorithm: 'none'
+      sasl:
+        mechanism: PLAIN
+        username: user
+        password: bitnami
